# TextNormalization

./: .cursorrules  .env  .gitignore  README.md  main.py  pyproject.toml
frontend/: index.html
src/ai/: embedding.py  llm.py
src/database/: chroma.py  sqlite.py
src/routers/: examples.py  processing.py  schemas.py
src/utils/: text_processing.py
