[project]
name = "normalization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi>=0.115.12",
    "openai>=1.76.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "rouge-score>=0.1.2",
    "sqlalchemy>=2.0.40",
]
